Fix "Spacing (Y, X)" + add the grid preview + grid/cols no preview mode

--- a/addons/html_builder/static/src/core/grid_layout/grid_layout.inside.scss
+++ b/addons/html_builder/static/src/core/grid_layout/grid_layout.inside.scss
@@ -1,5 +1,3 @@
-// TODO move this file elsewhere
-
 // GRID LAYOUT
 // we-button.o_grid {
 //     min-width: fit-content;
@@ -24,34 +22,36 @@
         filter: drop-shadow(-1px -1px 0px rgba(255, 255, 255, 0.3));
     }
 
-    // &.o_we_grid_preview {
-    //     @include media-breakpoint-down(lg) {
-    //         // Hiding the preview in mobile view (-> no grid in mobile view). We
-    //         // cannot use `display: none` because it would prevent the animation
-    //         // to be played and so its listener would not remove the preview.
-    //         height: 0;
-    //     }
-    //     pointer-events: none;
+    &.o_we_grid_preview {
+        // TODO style error
+        // @include media-breakpoint-down(lg) {
+        //     // Hiding the preview in mobile view (-> no grid in mobile view). We
+        //     // cannot use `display: none` because it would prevent the animation
+        //     // to be played and so its listener would not remove the preview.
+        //     height: 0;
+        // }
 
-    //     .o_we_cell {
-    //         animation: gridPreview 2s 0.5s;
-    //     }
-    // }
+        pointer-events: none;
+
+        .o_we_cell {
+            animation: gridPreview 2s 0.5s;
+        }
+    }
 }
 
 // Grid preview.
-// @keyframes gridPreview {
-//     to {
-//         fill-opacity: 0;
-//         stroke-opacity: 0;
-//     }
-// }
+@keyframes gridPreview {
+    to {
+        fill-opacity: 0;
+        stroke-opacity: 0;
+    }
+}
 
-// .o_we_drag_helper {
-//     padding: 0;
-//     border: $o-we-handle-border-width * 2 solid $o-we-accent;
-//     border-radius: $o-we-item-border-radius;
-// }
+.o_we_drag_helper {
+    padding: 0;
+    border: $o-we-handle-border-width * 2 solid $o-we-accent;
+    border-radius: $o-we-item-border-radius;
+}
 
 // Highlight of the grid items padding.
 @keyframes highlightPadding {
@@ -59,6 +59,7 @@
         border: solid rgba($o-we-handles-accent-color, 0.2);
         border-width: var(--grid-item-padding-y) var(--grid-item-padding-x);
     }
+
     to {
         border: solid rgba($o-we-handles-accent-color, 0);
         border-width: var(--grid-item-padding-y) var(--grid-item-padding-x);
